# DASH-Quadruped-Robot-Development-kit

./: DASH-BOM.numbers  readme.md
Arduino/: frontMega.ino
Arduino Codes/: 4middlemotors.ino  backMega.ino
LLM_server/: app.py
LLM_server/templates/: index.html
ML/: intent.ipynb
ML/data/: intent.csv
ML/results/runs/Jul14_14-15-40_GufransMacbookPro/: events.out.tfevents.1720955740.GufransMacbookPro.40777.0
ML/results/runs/Jul14_14-30-28_GufransMacbookPro/: events.out.tfevents.1720956628.GufransMacbookPro.40777.1
ML/results/runs/Jul14_14-32-23_GufransMacbookPro/: events.out.tfevents.1720956744.GufransMacbookPro.41426.0  events.out.tfevents.1720956965.GufransMacbookPro.41426.1
dash_app/: README.md  pubspec.yaml
dash_app/android/app/: build.gradle
dash_app/ios/: Podfile
dash_app/ios/Runner/: Info.plist
dash_app/ios/Runner.xcodeproj/: project.pbxproj
dash_app/lib/: controls.dart  home.dart  main.dart  settings.dart  voice_assistant.dart
dash_app/linux/: CMakeLists.txt  my_application.cc
dash_app/macos/Runner.xcodeproj/: project.pbxproj
dash_app/test/: widget_test.dart
dash_app/web/: index.html  manifest.json
dash_app/windows/: CMakeLists.txt
dash_app/windows/runner/: Runner.rc  main.cpp
ros/: config.json
ros/ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros/ros_ws/src/DASH_bringup/: CMakeLists.txt  package.xml
ros/ros_ws/src/DASH_bringup/launch/: dash.launch.py
ros/ros_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
ros/ros_ws/src/robot_interfaces/srv/: Handshake.srv  ImageCapture.srv  RobotStatusSrv.srv
(+126 files in other folders)
